--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     </header>
     <section class="features">
         <figure>
-            <img src="../images/art.jpg" alt="art">
+            <img src="art.jpg" alt="art">
             <figcaption>ART</figcaption>
         </figure>
 
         <figure>
-            <img src="../../images/art.jpg" alt=" art">
+            <img src="art.jpg" alt=" art">
             <figcaption>
                 ART
             </figcaption>
         </figure>
         <figure>
-            <img src="../../images/art.jpg" alt='art'>
+            <img src="art.jpg" alt='art'>
             <figcaption>ART</a></figcaption>
         </figure>
 
@@ -68,7 +68,7 @@
     </section>
     <section class="extra">
         <figure>
-            <img src="../../images/darkside.jpg" alt="skull">
+            <img src="darkside.jpg" alt="skull">
         </figure>
 
         <div>HEY</div>
@@ -113,9 +113,9 @@
         </section>
     </section>
 
-    <img class="image" src="../../images/hero.jpg" alt="hero">
-    <img class="image" src="../../images/nature.jpeg" alt="nature">
-    <img class="image" src="../../images/sand.jpeg" alt="sand">
+    <img class="image" src="hero.jpg" alt="hero">
+    <img class="image" src="nature.jpeg" alt="nature">
+    <img class="image" src="sand.jpeg" alt="sand">
 
     <footer>
         this is a footer
