--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="features">
         <figure>
-            <img src="../images/art.jpg" alt="art">
+            <img src="../art.jpg" alt="art">
             <figcaption>ART</figcaption>
         </figure>
 
