--- a/newfile.html
+++ b/newfile.html
@@ -24,10 +24,10 @@
         </ul>
 
     </header>
-    <img id="image_1" src="../images/art.jpg" alt="art">
+    <img id="image_1" src="art.jpg" alt="art">
     <section id="image">
-    <img class="image_1" src="../images/darkside.jpg" alt="skull">
-    <img class="image_1" src="../images/ambient.jpg" alt="ambient art">
+    <img class="image_1" src="darkside.jpg" alt="skull">
+    <img class="image_1" src="ambient.jpg" alt="ambient art">
     </section>
 
     <section>
@@ -55,8 +55,8 @@
     </section>
     
     <button id="new_button" onclick="runCode2()">this is a button</button>
-    <img id="nature" src="../images/nature.jpeg">
-    <img id="picture" src="../images/cat5.jpg">
+    <img id="nature" src="nature.jpeg">
+    <img id="picture" src="images/cat5.jpg">
     <ul id="cat">
         <li>THIS</li>
         <li>IS</li>
@@ -127,13 +127,13 @@
     <section id='kitty_cat'>
 
         <figure>
-            <img src="../images/cat3.jpg">
+            <img src="cat3.jpg">
         </figure>
         <figure>
-            <img src="../images/cat6.jpeg">
+            <img src="cat6.jpeg">
         </figure>
         <figure>
-            <img src="../images/cat4.jpg">
+            <img src="cat4.jpg">
         </figure>
     </section>
     <footer>
