--- a/newfile.html
+++ b/newfile.html
@@ -56,7 +56,7 @@
     
     <button id="new_button" onclick="runCode2()">this is a button</button>
     <img id="nature" src="nature.jpeg">
-    <img id="picture" src="images/cat5.jpg">
+    <img id="picture" src="cat5.jpg">
     <ul id="cat">
         <li>THIS</li>
         <li>IS</li>
