--- a/newfile.html
+++ b/newfile.html
@@ -55,7 +55,7 @@
     </section>
     
     <button id="new_button" onclick="runCode2()">this is a button</button>
-    <img id="nature" src="nature.jpeg">
+    <img id="nature" style="border:10px solid black;" src="nature.jpeg">
     <img id="picture" src="cat5.jpg">
     <ul id="cat">
         <li>THIS</li>
